<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2022 Project Kaleidoscope

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
  -->
<resources>
    <string name="app_name">Nyanpasu Wallpaper</string>
    <string name="acg_wallpaper">二次元</string>
    <string name="elaina_wallpaper">伊蕾娜</string>
    <string name="hobunsha_wallpaper">芳文社萝莉</string>
    <string name="spy_wallpaper">SPY x Family</string>
    <string name="vtb_wallpaper">Vtuber</string>
</resources>
