<?xml version="1.0" encoding="utf-8" ?>
<!--
    Copyright (C) 2022 Project Kaleidoscope

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

        http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<wallpapers>
    <category id="acg" title="@string/acg_wallpaper">
        <static-wallpaper
            id="acg_1"
            src="@drawable/acg_1"
            title="@string/acg_wallpaper"/>

        <static-wallpaper
            id="acg_2"
            src="@drawable/acg_2"
            title="@string/acg_wallpaper"/>

        <static-wallpaper
            id="acg_3"
            src="@drawable/acg_3"
            title="@string/acg_wallpaper"/>

        <static-wallpaper
            id="acg_4"
            src="@drawable/acg_4"
            title="@string/acg_wallpaper"/>

        <static-wallpaper
            id="acg_5"
            src="@drawable/acg_5"
            title="@string/acg_wallpaper"/>

        <static-wallpaper
            id="acg_6"
            src="@drawable/acg_6"
            title="@string/acg_wallpaper"/>

        <static-wallpaper
            id="acg_7"
            src="@drawable/acg_7"
            title="@string/acg_wallpaper"/>

        <static-wallpaper
            id="acg_8"
            src="@drawable/acg_8"
            title="@string/acg_wallpaper"/>

        <static-wallpaper
            id="acg_9"
            src="@drawable/acg_9"
            title="@string/acg_wallpaper"/>

        <static-wallpaper
            id="acg_10"
            src="@drawable/acg_10"
            title="@string/acg_wallpaper"/>

        <static-wallpaper
            id="acg_11"
            src="@drawable/acg_11"
            title="@string/acg_wallpaper"/>

        <static-wallpaper
            id="acg_12"
            src="@drawable/acg_12"
            title="@string/acg_wallpaper"/>

        <static-wallpaper
            id="acg_13"
            src="@drawable/acg_13"
            title="@string/acg_wallpaper"/>
    </category>
    <category id="elaina" title="@string/elaina_wallpaper">
        <static-wallpaper
            id="elaina_1"
            src="@drawable/elaina_1"
            title="@string/elaina_wallpaper"/>

        <static-wallpaper
            id="elaina_2"
            src="@drawable/elaina_2"
            title="@string/elaina_wallpaper"/>
    </category>
    <category id="hobunsha" title="@string/hobunsha_wallpaper">
        <static-wallpaper
            id="hobunsha_1"
            src="@drawable/hobunsha_1"
            title="@string/hobunsha_wallpaper"/>

        <static-wallpaper
            id="hobunsha_2"
            src="@drawable/hobunsha_2"
            title="@string/hobunsha_wallpaper"/>

        <static-wallpaper
            id="hobunsha_3"
            src="@drawable/hobunsha_3"
            title="@string/hobunsha_wallpaper"/>

        <static-wallpaper
            id="hobunsha_4"
            src="@drawable/hobunsha_4"
            title="@string/hobunsha_wallpaper"/>

        <static-wallpaper
            id="hobunsha_5"
            src="@drawable/hobunsha_5"
            title="@string/hobunsha_wallpaper"/>
    </category>
    <category id="spy" title="@string/spy_wallpaper">
        <static-wallpaper
            id="spy_1"
            src="@drawable/spy_1"
            title="@string/spy_wallpaper"/>

        <static-wallpaper
            id="spy_2"
            src="@drawable/spy_2"
            title="@string/spy_wallpaper"/>

        <static-wallpaper
            id="spy_3"
            src="@drawable/spy_3"
            title="@string/spy_wallpaper"/>
    </category>
    <category id="vtb" title="@string/vtb_wallpaper">
        <static-wallpaper
            id="vtb_1"
            src="@drawable/vtb_1"
            title="@string/vtb_wallpaper"/>

        <static-wallpaper
            id="vtb_2"
            src="@drawable/vtb_2"
            title="@string/vtb_wallpaper"/>

        <static-wallpaper
            id="vtb_3"
            src="@drawable/vtb_3"
            title="@string/vtb_wallpaper"/>

        <static-wallpaper
            id="vtb_4"
            src="@drawable/vtb_4"
            title="@string/vtb_wallpaper"/>

        <static-wallpaper
            id="vtb_5"
            src="@drawable/vtb_5"
            title="@string/vtb_wallpaper"/>
    </category>
</wallpapers>
